--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-transformer-sharp": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.0",
