--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "lakewood-dental",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Website for Lakewood Dental has been serving the Lakewood, CA area for over 30 years.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Salem Aziel <salem@viadelweb.com>",
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
     "@fontsource/poppins": "^4.5.10",
@@ -13,12 +13,14 @@
     "gatsby-plugin-manifest": "^5.7.0",
     "gatsby-plugin-react-helmet-async": "^1.2.3",
     "gatsby-plugin-sharp": "^5.7.0",
+    "gatsby-plugin-sitemap": "^6.8.0",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-tooltip": "^5.10.1"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.0",
