--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "@fontsource/inter": "^4.5.15",
     "@fontsource/poppins": "^4.5.10",
     "@fontsource/raleway": "^4.5.12",
-    "gatsby": "^5.7.0",
-    "gatsby-plugin-image": "^3.7.0",
-    "gatsby-plugin-manifest": "^5.7.0",
+    "gatsby": "^5.14.4",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-react-helmet-async": "^1.2.3",
-    "gatsby-plugin-sharp": "^5.7.0",
-    "gatsby-plugin-sitemap": "^6.8.0",
-    "gatsby-source-filesystem": "^5.7.0",
-    "gatsby-transformer-sharp": "^5.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.8.0",
-    "react-tooltip": "^5.10.1"
+    "react-icons": "^4.12.0",
+    "react-tooltip": "^5.29.0"
   },
   "devDependencies": {
-    "@tailwindcss/container-queries": "^0.1.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "latest",
-    "gatsby-plugin-postcss": "^6.7.0",
-    "postcss": "latest",
-    "prettier": "^2.8.4",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
+    "gatsby-plugin-postcss": "^6.14.0",
+    "postcss": "^8.5.5",
+    "prettier": "^2.8.8",
     "tailwind-children": "^0.5.0",
-    "tailwindcss": "latest"
+    "tailwindcss": "^3.4.17"
   },
   "keywords": [
     "gatsby"
@@ -52,5 +52,10 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "overrides": {
+    "cookie": "^0.7.0",
+    "path-to-regexp": "^0.1.12",
+    "react-server-dom-webpack": "false"
   }
 }
