update netlify.toml to use Node.js version 22, npm instead of yarn, and enable legacy peer dependencies

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   publish = "public"
   command = "gatsby build"
-  NETLIFY_USE_YARN = "true"
 [build.environment]
-  NODE_VERSION = "18.3.0"
+  NODE_VERSION = "22"
+  NPM_FLAGS= "--legacy-peer-deps"
 [[headers]]
   for = "/*"
   [headers.values]
